# OptiCuda

Matrix_Multiplication_Optimization/: CMakeLists.txt  MatrixMult_Optimization.ipynb  README.md  benchmark.cpp  driver.cpp  normal_matmul.cu  normal_matmul.ll  optimized_matmul.ll  optimized_matmul.ptx  warp_optimization.cpp  warp_optimization.h
